git/K8S/configmap.yml
apiVersion: v1
kind: Pod 
metadata:
  name: configpod
  labels:
    env: uat 
spec: 
  containers: 
    - name: configpod
      image: mysql:8
      ports: 
        - containerPort: 3306
