git/K8S/env.yml
apiVersion: v1
kind: Pod
metadata:
  name: example
  labels:
    name: example
spec: 
  containers:
    - name: example
      image: mysql
