git/K8S/mysqlsecret.yml
apiVersion: v1 
kind: Pod
metadata:
  name: secretpod
spec: 
  containers: 
    - name: mysqlpod 
      image: mysql:8
      ports:
        - name: mysqlport
          containerPort: 3306
          protocol: TCP
