git/K8S/nodename.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nspod
  labels: 
    app: jenkins
spec: 
  nodeName: "aks-nodepool1-48762576-vmss000000"
  containers: 
    - name: jenkins
      image: jenkins/jenkins:jdk11
      ports:
        - name: jenkinsport
          containerPort: 8080
          protocol: TCP
