git/K8S/nodeselector.yml
apiVersion: v1
kind: Pod
metadata: 
  name: ns-pod
  labels: 
    app: jenkins
    purpose: nodeSelector
spec: 
  nodeSelector: 
    purpose: poc
  containers: 
    - name: jenkins
      image: jenkins/jenkins:jdk11
      ports:
        - name: jenkinsport
          containerPort: 8080
          protocol: TCP
