git/K8S/secret.yml
apiVersion: v1 
kind: Pod
metadata:
  name: secretpod
spec: 
  containers:
    - name: secretpod
      image: newacrsh.azurecr.io/nginx:v1
      containerPort: 80
