git/K8S/spc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spc
spec:
  containers:
    - name: spc
      image: shruthibandi457/spc:1.2
      ports: 
        - containerPort: 8080
