git/K8S/tolerations.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
  tolerations:
  - key: purpose
    operator: Equal
    effect: NoSchedule

    #herekeyissomething-keyofthetaintnode,sothatitwillnotgoschedulethepodontaintnode
