git/K8S/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: jenkinsdeploy
  annotations: 
    kubernetes.io/change-cause: "using annotations"
  labels:
    env: uat
spec: 
  minReadySeconds: 2
  replicas: 4
  selector:
    matchLabels:
      env: uat
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      name: jenkinsdeploy
      labels:
        env: uat
    spec:
      containers:
        - name: jenkinsdeploy
          image: syedsohail321/jenkins:1.0
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: "/"
              port: 8080
          ports: 
            - containerPort: 8080
              name: jenkinsdeploy
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: "/"
              port: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: jenkinssvc
  labels:
    env: uat 
spec: 
  selector: 
    env: uat 
  ports: 
    - name: jenkinssvc
      port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
