git/K8S/mysqlsh.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-st
  labels: 
    env: uat
spec: 
  minReadySeconds: 1
  replicas: 1
  selector:
    matchLabels:
      env: uat
  template: 
    metadata: 
      name: mysql-st
      labels:
        env: uat
    spec: 
      containers:
        - name: mysql-st
          image: mysql:8
          resources: 
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 200m
          ports:
            - name: mysql-st
              containerPort: 3306
              protocol: TCP
          volumeMounts: 
            - name: mysqlpvc
              mountPath: /var/lib/mysql
      volumes: 
        - name: mysqlpvc
          PersistentVolumeClaim: 
            claimName: mysqlpvc
---
apiVersion: v1 
kind: Service
metadata:
  name: mysqlsvc
  labels: 
    env: uat
spec: 
  clusterIP: None
  type: ClusterIP
  ports: 
   - name: mysqlsvc
     port: 8081
     protocol: TCP
     targetPort: 3306
  selector: 
    env: uat
