git/K8S/nopdeploysh.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nopdeploy
  labels: 
    exp: testing
spec:
  minReadySeconds: 2
  replicas: 1
  selector:
    matchLabels:
      example: test-deployment
  template:
    metadata:
      name: nopdeploy
      labels:
        example: test-deployment
    spec: 
      containers:
        - name: nopdeploy
          image: manugatla/nopcommerce
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 1
            successThreshold: 1
            periodSeconds: 2
            httpGet:
              port: 8081
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            httpGet:
              port: 4200
          resources:
            requests: 
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "128Mi" 
          ports:
            - containerPort: 5000
              name: nopdeployport
              protocol: TCP
---
apiVersion: v1 
kind: Service
metadata: 
  name: nop-svc
  labels:
    example: test-deployment
spec: 
  ports:
    - name: nop-svc
      port: 8081
      protocol: TCP
      targetPort: 5000
  selector:
    example: test-deployment
  type: LoadBalancer
