git/K8S/sridhar.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  labels:
    app: web
spec:
  ports:
  - name: nginx-svc
    port: 8081
    targetPort: 8080
  selector:
    app: web
  type: LoadBalancer
