git/K8S/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nop
spec:
  selector:
    app: web
  type: NodePort
  ports: 
    - name: svcport
      port: 8080
      protocol: TCP 
      targetPort: 5000
